translation verification section first part finished

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -27,6 +27,7 @@
 \newacronym{ac:fir}{FIR}{finite impulse response}
 \newacronym{ac:lti}{LTI}{linear time invariant}
 \newacronym{ac:tp}{TP}{Tiefpass}
+\newacronym{ac:cnc}{CNC}{Computerized Numerical Control}
 
 
 
