--- a/content/3_konzept/table/messmittel.tex
+++ b/content/3_konzept/table/messmittel.tex
@@ -1,7 +1,7 @@
 \begin{table}[htbp]
      \centering
-     \caption{Messmittelliste}
-     \label{tab:messmittel}
+     \caption{Messmittelliste Verifikation Translation}
+     \label{tab:messmittel_translation}
      \begin{tabularx}{\textwidth}{|l|X|l|} 
          \hline
          \rowcolor{bfhblue}
