--- a/listings.tex
+++ b/listings.tex
@@ -59,6 +59,22 @@
     breaklines=true,
     captionpos=b,
     language=[ANSI] C}
+    
+%Bash
+\lstdefinestyle{bash}{numbers=left, 
+    basicstyle=\scriptsize\ttfamily,
+    numberstyle=\tiny, 
+    xleftmargin=0.5\leftmargin,
+    xrightmargin=\rightmargin,
+    numbersep=5pt,
+    backgroundcolor=\color{listingbackground}, 
+    identifierstyle=\color{colIdentifier}, %
+    keywordstyle=\color{colKeys}, %
+    stringstyle=\color{colString}, %
+    commentstyle=\color{colComments}, %
+    breaklines=true,
+    captionpos=b,
+    language=bash}
 
 
 
