add part of section Anatomie Knie

--- a/content/2_grundlagen/grundlagen.tex
+++ b/content/2_grundlagen/grundlagen.tex
@@ -15,8 +15,14 @@
 \chapter{Grundlagen}\label{ch:grundlagen}
 %
 %
-%Anatomie des Knies
-\section{Anatomie des Knies}
+% Funktion des Kreuzbandes
+\section{Funktion des Kreuzbandes}
+Das Kreuzband hat im Knie als erste Funktion, die Bewegungsfähigkeit des Kniegelenkes zu beschränken. Somit kann das Knie nicht überstreckt oder beliebig gebeugt werden. Die zweite Funktion ist die Stabilisierung der Verbindung zwischen Ober- und Unterschenkel. Genau diese Stabilität ist bei einem verletzen Kreuzband nicht mehr gewährleistet, was sich bei Belastung mit einer schrägen Auslenkung des Knies bemerkbar macht. \par
+Das Kreuzband wird in Sportarten in welchen grosse Belastungen des Knies mit Tätigkeiten wie Rennen, Springen oder stop \& go-Sportarten wie Unihockey oder Fussball geschehen, besonders belastet. Eine Gute Rehabilitation des Verletzen Sportlers ist besonders wichtig. Studien in den USA bei professionellen Football-Spielern haben gezeigt, dass die Karriere von Sportlern mit mehrfachem Kreuzbandriss im Durchschnitt kürzer ist als solche von Sportlern mit nur einfachem oder keinem Kreuzbandriss. Aus diesem Grund sollte ein möglichst grossen Wert auf den richtig getimten Wiedereinstieg ins Training gelegt werden.
+%
+% Anatomie des Knies
+\subsection*{Anatomie des Knies}
+
 %
 %
 %LabVIEW auf NI myRIO
