add section adaptiv Filter

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -28,7 +28,7 @@
 \newacronym{ac:lti}{LTI}{linear time invariant}
 \newacronym{ac:tp}{TP}{Tiefpass}
 \newacronym{ac:cnc}{CNC}{Computerized Numerical Control}
-
+\newacronym{ac:lms}{LMS}{Least Mean Square}
 
 
 
