--- a/bibliography.bib
+++ b/bibliography.bib
@@ -220,3 +220,14 @@
   ISBN = {}, 
   keywords = {pic},
 }
+
+@inbook{lit:adaptFiltVetter,
+  booktitle = {Projektorientierte Signalverarbeitung 5 Adaptive Filter},
+  publisher = {Berner Fachhochschule},
+  year = {2013},
+  author = {Dr. R: Vetter},
+  edition = {},
+  pages = {3-7},
+  ISBN = {}, 
+  keywords = {lit},
+}
