--- a/glossary.tex
+++ b/glossary.tex
@@ -38,3 +38,6 @@
 %
 % MATLAB
 \newglossaryentry{g:matlab}{name=MATLAB, description={Software von \href{http://www.mathworks.ch/}{The MathWorks} speziel ausgelegt zum Lösen mathematischer Problemstellungen}}
+% stationäres Signal
+\newglossaryentry{g:stationaer}{name=stationär, description={Ein Signal wird als stationär bezeichnet, wenn seine Signalkenngrössen nicht abhängig von der Zeit sind}}
+\newglossaryentry{g:gradientenvefahren}{name=Gradientenvefahren, description={Verfahren bei Optimierungen. Dabei wird der  angenäherter Wert stets in die Richtung des negativen Gradienten korrigiert (Methode des steilsten Abstieges)}}
