--- a/content/2_grundlagen/grundlagen.tex
+++ b/content/2_grundlagen/grundlagen.tex
@@ -18,7 +18,7 @@
 % Funktion des Kreuzbandes
 \section{Funktion des Kreuzbandes}
 Das Kreuzband hat im Knie als erste Funktion, die Bewegungsfähigkeit des Kniegelenkes zu beschränken. Somit kann das Knie nicht überstreckt oder beliebig gebeugt werden. Die zweite Funktion ist die Stabilisierung der Verbindung zwischen Ober- und Unterschenkel. Genau diese Stabilität ist bei einem verletzen Kreuzband nicht mehr gewährleistet, was sich bei Belastung mit einer schrägen Auslenkung des Knies bemerkbar macht. \par
-Das Kreuzband wird in Sportarten in welchen grosse Belastungen des Knies mit Tätigkeiten wie Rennen, Springen oder stop \& go-Sportarten wie Unihockey oder Fussball geschehen, besonders belastet. Eine Gute Rehabilitation des Verletzen Sportlers ist besonders wichtig. Studien in den USA bei professionellen Football-Spielern haben gezeigt, dass die Karriere von Sportlern mit mehrfachem Kreuzbandriss im Durchschnitt kürzer ist als solche von Sportlern mit nur einfachem oder keinem Kreuzbandriss. Aus diesem Grund sollte ein möglichst grossen Wert auf den richtig getimten Wiedereinstieg ins Training gelegt werden.
+Das Kreuzband wird in Sportarten in welchen grosse Belastungen des Knies mit Tätigkeiten wie Rennen, Springen oder stop \& go-Sportarten wie Unihockey oder Fussball geschehen, besonders belastet. Eine Gute Rehabilitation des Verletzen Sportlers ist besonders wichtig. Studien in den USA bei professionellen Football-Spielern haben gezeigt, dass die Karriere von Sportlern mit mehrfachem Kreuzbandriss im Durchschnitt kürzer ist als solche von Sportlern mit nur einfachem oder keinem Kreuzbandriss. Aus diesem Grund sollte ein möglichst grossen Wert auf den richtig getimten Wiedereinstieg ins Training gelegt werden. \todo{add reference}
 %
 % Anatomie des Knies
 \subsection*{Anatomie des Knies}
@@ -153,3 +153,41 @@ y(n) & Integral von Beginn bis zur Stelle n\\
 T_a & Abtastrate\\
 x(n) & Abgetasteter Wert an Stelle n 
            }[eq:trapez]
+%
+% Adaptives Filter
+\section{adaptives Filter}
+Ein adaptives Filter ist eine besondere Art von digitalem Filter. Dieses Filter hat die Möglichkeit seine Filterkoeffizienten und somit seine Filtereigenschaften während dem Betrieb anzupassen. Die neuen Filterkoeffizienten werden dabei aus den alten Filterkoeffizienten und der ermittelten Aktualisierung berechnet (z. Bsp. anhand der Differenz-Fehler zwischen $y(n)$ und $\hat{y}(n)$). Diese Berechnung erfolgt mit jedem neuen Sample. Das Prinzip ist in Abbildung \vref{img:adaptives_Filter} ersichtlich.\par
+% 
+% Prinzip adaptives Filter
+\image{content/2_grundlagen/image/adaptives_Filter}{scale=0.6}{htbp}[Prinzip eines adaptiven Filters][Prinzip eines adaptiven Filters][img:adaptives_Filter]
+% 
+Das Signal $x(n)$ wird von einem unbekannten System mit additivem Fehler $e(n)$ (z. Bsp. Rauschen oder Offset) zu $y(n)$ geformt. Dieses System soll mit einer adaptiven Methode geschätzt werden um somit ein geschätztes Ausgangssignal $\hat{y}(n)$ zu erhalten welches möglichst genau dem Ausgangssignal des unbekannten Systems entspricht. Aus dem geschätzten Ausgangssignal $\hat{y}(n)$ und dem Ausgang des unbekannten Systems $y(n)$ kann durch Subtraktion der Fehler $\epsilon(n)$ berechnet werden. Aus diesem Fehler und den alten Filterkoeffizienten werden die neuen Filterkoeffizienten bestimmt. Das Ausgangssignal des unbekannten Systems $y(n)$ nimmt in diesem Fall eine Art \glqq Lernfunktion\grqq ein. Das geschätzte Signal $\hat{y}(n)$ wird an diese \glqq Lernfunktion\grqq mit der adaptiven Filterung angenähert. Die Aktualisierung der Filterparameter wird mit verschiedenen Algorithmen erreicht. Ein häufig verwendetes Verfahren ist beispielsweise der \gls{ac:lms}-Algorithmus. Dieser Algorithmus ist einfach umzusetzen und beruht auf dem \gls{g:gradientenvefahren}.\par
+%
+Für den einfachen Fall, dass das adaptive Filter nur einen Filterkoeffizienten $w$ hat gilt, wie in Gleichung \vref{eq:adaptFilt} dargestellt, folgendes.
+%
+\formula{
+\hat{y}(n) = w * x(n) \\\\
+\epsilon(n) = y(n) -\hat{y}(n)\\ 
+ = y(n) - w * x(n)            
+}{ 
+\hat{y}(n) & geschätzte Funktion\\
+w & Filterkoeffizient\\
+x(n) & Eingangssignal\\
+\epsilon(n) & Fehler \\
+y(n) & Lernfunktion
+}[eq:adaptFilt]
+%
+Aus dem Fehler $\epsilon$(n) und dem Filterkoeffizienten $w$ kann nach dem erwähnten \gls{ac:lms}-Algorithmus der neue Filterkoeffizient berechnet werden. Bei diesem Algorithmus wird der nächste Filterkoeffizienten mittels des Gradienten des Fehlers bestimmt. Dies ist in Gleichung \vref{eq:filtkoeff} ersichtlich. \todo{bessere erklären, herleiten}
+%
+\formula{
+w_{n+1} =w_n + \mu \left\{ -\frac{\partial \epsilon(n)^2}{\partial w_n}\right\} \\
+= w_n + \mu*\epsilon(n)*x(n)            
+}{ 
+w_{n+1} & neuer Filterkoeffizient\\
+w_{n} & aktueller Filterkoeffizient\\
+\mu & Vorfaktor\\
+\epsilon(n) & Fehler\\
+x(n) & Eingangssignal 
+}[eq:filtkoeff]
+% 
+Der Vorfaktor $\mu$ hat Einfluss auf die Geschwindigkeit und Stabilität des Filters. Wird dieser grösser gewählt, so konvergiert das Filter zwar schneller läuft jedoch Gefahr instabil zu werden \cite{lit:adaptFiltVetter}.
